2003-08-03  Marco Gerards  <metgerards@student.han.nl>

	* inode.c (read_node): Fix typo.

2003-08-01  Marco Gerards  <metgerards@student.han.nl>

	* node-create.c: New file.
	* Makefile (SRCS): Added node-created.c.
	* dir.c: Include <hurd/fsys.h>.
	(diskfs_direnter_hard): Initialize a new block with zeros. Enter
	direntry and setup the virtual	inode. Also handle directories
	correctly.
	(diskfs_rewrite_hard): Function rewritten.
	(diskfs_dirempty): Change logic to test if a file was deleted.
	* fat.c (fat_extend_chain): Unlock spin_lock when returning from
	function. Set dn->last to 0 when deallocating the complete
	file. Update dn->last when not deallocating the complete file. Set
	dn->first to zero when the complete file was deallocated. Also
	update dn->length_of_chain to the new amount of clusters in the
	chain.
	* main.c (diskfs_hard_readonly): Remove global variable.

2003-07-29  Jeff Bailey  <jbailey@nisa.net>

	* fatfs.h (LOG2_BLOCKS_PER_CLUSTER): Fix typo.

2003-07-17  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c (find_cluster): Round to cluster size rather than adding
	cluster size.

2003-07-14  Marco Gerards  <metgerards@student.han.nl>

	* fat.c (fat_read_sblock): Don't test if the root dir size is a
	multiple of sectors_per_cluster.  Reported by Barry deFreese
	(bddebian@cox.net).

	* fatfs.h (LOG2_BLOCKS_PER_CLUSTER): New macro.
	(FAT_FIRST_CLUSTER_BLOCK): Likewise.
	(fat_first_cluster_byte): Macro removed.

	* inode.c (read_node): Correctly setup diskfs_root_node for FAT32
	filesystems.

	* pager.c (fat_getcluster): Check for reading beyond allocsize
	correctly for file systems with a clustersize > vm_page_size.
	(file_pager_read_small_page): Don't use byte offsets when
	calculating the block.
	(file_pager_read_huge_page): Likewise.
	(pending_clusters_write): Likewise.
	(file_pager_write_small_page): Likewise.
	(STAT_INC): Cast to void to suppress warning.

2003-04-26  Marco Gerards  <metgerards@student.han.nl>
