@@ -1,3 +1,7 @@
+2003-08-05  Marcus Brinkmann  <marcus@gnu.org>
+
+	* fat.c (fat_read_sblock): Catch error from store_read.
+
 2003-08-03  Marco Gerards  <metgerards@student.han.nl>
 
 	* inode.c (read_node): Fix typo.
